# Tidal

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  bl  build.rs  td
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  rust.yml
blue_lagoon/: Cargo.toml  Print.bl
blue_lagoon/src/: compiler.rs  main.rs  parser.rs
code/: file-1.td  file-2.bl  file-3.td  file-4.bl  file-5.td  file-6.bl  file-7.bl  file-8.td  print.bl
code/BrainRot/: brainrot-1.br  brainrot-2.br  brainrot-3.br  brainrot-4.br  brainrot-5.br  brainrot-6.br
code/Normal/: file-1.td  file-10.td  file-11.td  file-12.td  file-13.td  file-14.td  file-15.td  file-16.td  file-17.td  file-18.td  file-2.td  file-9.td
code/Normal/Examples/: FibbonachiSequence.td  InfiniteLoops.td
scripts/: install.sh  run-all.sh
src/: .gitignore  ast.cpp  ast.h  codegen.cpp  codegen.h  compiler.rs  docs.rs  error.rs  interpreter.rs  lexer.cpp  lexer.h  lexer.rs  main.cpp  main.rs  parser.cpp  parser.h  parser.rs
src/libs/: io.rs  math.rs  mem.rs  mod.rs  os.rs  std.rs  sys.rs
website/: .firebaserc  firebase.json
website/main/: index.css  index.html  past-releases.html
